# heretic-ai

./: .dockerignore  .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  main.py  schemas.py
backend/app/services/: image.py  job_queue.py  jobs.py  ollama.py  subtitles.py  tts.py  video.py  voices.py
backend/tests/: test_health.py  test_images.py  test_job_queue.py  test_ollama.py  test_scripts.py  test_subtitles.py  test_tts.py  test_video.py  test_voices.py
frontend/: .dockerignore  Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json
frontend/app/: create-workspace.test.tsx  create-workspace.tsx  globals.css  image-panel.test.tsx  image-panel.tsx  layout.tsx  page.test.tsx  page.tsx  render-panel.test.tsx  render-panel.tsx  studio-section.tsx  studio-shell.tsx  voice-panel.test.tsx  voice-panel.tsx
frontend/app/assets/: page.tsx
frontend/app/characters/: page.tsx
frontend/app/create/: page.tsx
frontend/app/jobs/: page.tsx
frontend/app/projects/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/voices/: page.tsx
frontend/lib/: jobs.ts
scripts/: flux_infer.py
